[gd_scene load_steps=11 format=3 uid="uid://cgltwcj1ebm8u"]

[ext_resource type="Script" path="res://Main/Boilers/GameModes/BossFight/Boss.gd" id="1_u4l64"]
[ext_resource type="PackedScene" uid="uid://bo87jk8il5ov8" path="res://Main/Boilers/Attacks/Flower.tscn" id="2_igmlh"]
[ext_resource type="PackedScene" uid="uid://8t4s0t0pv7q2" path="res://Main/Boilers/HealthBarUI.tscn" id="3_pojbw"]
[ext_resource type="Texture2D" uid="uid://wdfw0hlu7rde" path="res://icon.svg" id="4_fwxji"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_08pum"]
size = Vector2(38, 38)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jlb4k"]
draw_center = false
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(1, 0, 0, 1)
border_blend = true
corner_radius_top_left = 100
corner_radius_top_right = 100
corner_radius_bottom_right = 100
corner_radius_bottom_left = 100

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0uyv7"]
size = Vector2(40, 40)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1h76q"]
bg_color = Color(0.6, 0.6, 0.6, 0.466667)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_khj7y"]
size = Vector2(93, 174)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mgri1"]
size = Vector2(432, 47)

[node name="Boss" type="RigidBody2D" groups=["Enemy"]]
position = Vector2(576, 237)
collision_layer = 32
collision_mask = 28
gravity_scale = 0.0
script = ExtResource("1_u4l64")
Bullet = ExtResource("2_igmlh")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HealthBarUI" parent="UI" instance=ExtResource("3_pojbw")]
layout_mode = 1
offset_left = -1.0
offset_top = -61.0
offset_right = -1.0
offset_bottom = -61.0

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_fwxji")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_08pum")

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="UnderUI" type="Control" parent="."]
show_behind_parent = true
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -39.0
offset_top = -39.5
offset_right = 39.0
offset_bottom = 39.5
grow_horizontal = 2
grow_vertical = 2

[node name="Circle" type="Panel" parent="UnderUI"]
layout_mode = 0
offset_left = -1.0
offset_top = -1.0
offset_right = 79.0
offset_bottom = 79.0
theme_override_styles/panel = SubResource("StyleBoxFlat_jlb4k")

[node name="Hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("RectangleShape2D_0uyv7")

[node name="AimShow" type="Node2D" parent="."]
show_behind_parent = true

[node name="AimPanel1" type="Panel" parent="AimShow"]
show_behind_parent = true
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 48.0
offset_top = -24.0
offset_right = 432.0
offset_bottom = 24.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1h76q")

[node name="CloseAttack" type="Area2D" parent="AimShow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimShow/CloseAttack"]
position = Vector2(36.5, 0)
shape = SubResource("RectangleShape2D_khj7y")

[node name="RangeAttack" type="Area2D" parent="AimShow"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AimShow/RangeAttack"]
position = Vector2(217, -0.5)
shape = SubResource("RectangleShape2D_mgri1")

[node name="RangeAttackTimer" type="Timer" parent="AimShow"]
wait_time = 10.0
autostart = true

[node name="AttackingTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="area_entered" from="AimShow/CloseAttack" to="." method="_on_close_attack_area_entered"]
[connection signal="area_entered" from="AimShow/RangeAttack" to="." method="_on_range_attack_area_entered"]
[connection signal="timeout" from="AimShow/RangeAttackTimer" to="." method="_on_range_attack_timer_timeout"]
[connection signal="timeout" from="AttackingTimer" to="." method="_on_attacking_timer_timeout"]
